fix: remove insignia flickering on move

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -106,7 +106,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.8);
-  display: flex;
   align-items: center;
   justify-content: center;
   z-index: 1000;
@@ -122,6 +121,7 @@
 .insigniaContainer.moved::after {
   content: "";
   position: absolute;
+  top: 0;
   width: 100%;
   height: 100%;
 }
